--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ textarea[name="content"] {
 <body>
 	
 	<div class="container">
-		<h1>JSON格式化</h1>
+		<h1>JSON格式化2</h1>
 		<ul class="nav nav-tabs">
 			<li class="active"><a href="#tab_format_json" data-toggle="tab">JSON格式化</a></li>
 			<li class=""><a href="#tab_format_css" data-toggle="tab">CSS格式化</a></li>
